--- a/flask_app/templates/menu.html
+++ b/flask_app/templates/menu.html
@@ -5,6 +5,10 @@
     <a href="/airlines/">Airlines</a>
     <a href="/flights/">Flights</a>
     {% if session['user_id'] %}
+        <a href="/dashboard/">Dashboard</a>
+        {% if user.access == 9 %}
+            <a href="/users/">Users</a>
+        {% endif %}
         <button><a href="/logout/">Logout</a></button>
     {% endif %}
     {% endblock menu %}
