--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header>
+        <h1>Welcome to AirCorp Please sign in</h1>
         <nav>
-            {% block menu %} {% include 'menu.html' %} {% endblock menu %}
+            
         </nav>
     </header>
     <div class="messages">
