saving files after office hours

--- a/flask_app/templates/addAirline.html
+++ b/flask_app/templates/addAirline.html
@@ -36,6 +36,9 @@
                 <label for="planes">Number of planes: </label>
                 <input type="number" name="planes">
             </section>
+            <section>
+                <input type="hidden" name="user_id" value='{{user.id}}'>
+            </section>
             <button>Add Airline</button>
         </form>
     </main>
